[package]
name = "nametag"
description = "A utility crate emulating UE4's FName system"
version = "0.0.1"
authors = ["trashbyte <github@trashbyte.io>"]
edition = "2018"
repository = "https://github.com/trashbyte/nametag"
keywords = ["name", "tag", "fname"]
categories = ["no-std", "development-tools::build-utils"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.2", default-features = false }
proc-macro2 = "1.0.9"
fxhash = "0.2.1"
xxhash-rust = {version = "0.8.5", features = ["xxh64", "const_xxh64"] }
maplit = "1.0"
